Test Sandbox Project/src/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>AWB__c</fullName>
        <label>AWB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier__c</fullName>
        <label>Courier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JNE</fullName>
                </value>
                <value>
                    <fullName>Wahana</fullName>
                </value>
                <value>
                    <fullName>Tiki</fullName>
                </value>
                <value>
                    <fullName>Pos Indonesia</fullName>
                </value>
                <value>
                    <fullName>Gojek</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Order</label>
        <referenceTo>Customer_Order__c</referenceTo>
        <relationshipLabel>Shipment</relationshipLabel>
        <relationshipName>Shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination_Address__c</fullName>
        <label>Destination Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Seller_Ext_Id__c</fullName>
        <label>From Seller Ext Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From (Seller)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipment (Sender)</relationshipLabel>
        <relationshipName>Shipment_Sender</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Shipment</relationshipLabel>
        <relationshipName>Shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Status__c</fullName>
        <label>Latest Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Shipment</relationshipLabel>
        <relationshipName>Shipment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Origin_Address__c</fullName>
        <label>Origin Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipment_Id__c</fullName>
        <externalId>true</externalId>
        <label>Shipment Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Amount__c</fullName>
        <label>Shipping Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_Buyer_Ext_Id__c</fullName>
        <label>To Buyer Ext Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To (Buyer)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipment</relationshipLabel>
        <relationshipName>Shipment_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <inlineHelpText>Kg</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SID-{000}</displayFormat>
        <label>Shipment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>